--- a/requirements.txt
+++ b/requirements.txt
@@ -1,41 +1,94 @@
+appnope==0.1.4
+asttokens==2.4.1
 attrs==23.2.0
+backcall==0.2.0
+beautifulsoup4==4.12.3
+bidict==0.23.1
+bleach==6.1.0
 blinker==1.8.2
 build==1.2.1
 certifi==2024.2.2
+charset-normalizer==3.3.2
 click==8.1.7
+decorator==5.1.1
+defusedxml==0.7.1
+docopt==0.6.2
+executing==2.0.1
+fastjsonschema==2.20.0
 Flask==3.0.3
 Flask-Cors==4.0.1
+Flask-SocketIO==5.3.6
 gunicorn==22.0.0
 h11==0.14.0
 idna==3.6
+ipython==8.12.3
 itsdangerous==2.2.0
+jedi==0.19.1
 Jinja2==3.1.4
+jsonschema==4.22.0
+jsonschema-specifications==2023.12.1
+jupyter_client==8.6.2
+jupyter_core==5.7.2
+jupyterlab_pygments==0.3.0
 lxml==5.2.2
 MarkupSafe==2.1.5
+matplotlib-inline==0.1.7
+mistune==3.0.2
 MouseInfo==0.1.3
+nbclient==0.10.0
+nbconvert==7.16.4
+nbformat==5.10.4
 numpy==1.26.4
 opencv-python==4.9.0.80
 outcome==1.3.0.post0
 packaging==24.0
+pandocfilters==1.5.1
+parso==0.8.4
+pexpect==4.9.0
+pickleshare==0.7.5
 pillow==10.3.0
-PyGetWindow==0.0.9
-PyMsgBox==1.0.9
+pipreqs==0.5.0
+platformdirs==4.2.2
+prompt_toolkit==3.0.47
+ptyprocess==0.7.0
+pure-eval==0.2.2
 
+PyGetWindow==0.0.9
+Pygments==2.18.0
+PyMsgBox==1.0.9
 pyperclip==1.8.2
 pyproject_hooks==1.1.0
 PyRect==0.2.0
 PyScreeze==0.1.30
 PySocks==1.7.1
+python-dateutil==2.9.0.post0
 python-docx==1.1.2
+python-dotenv==1.0.1
+python-engineio==4.9.1
+python-socketio==5.11.2
 
 pytweening==1.2.0
+pyzmq==26.0.3
+referencing==0.35.1
+requests==2.32.3
+rpds-py==0.18.1
 rubicon-objc==0.4.8
 selenium==4.19.0
+simple-websocket==1.0.0
+six==1.16.0
 sniffio==1.3.1
 sortedcontainers==2.4.0
+soupsieve==2.5
+stack-data==0.6.3
+tinycss2==1.3.0
+tornado==6.4.1
+traitlets==5.14.3
 trio==0.25.0
 trio-websocket==0.11.1
 typing_extensions==4.10.0
 urllib3==2.2.1
+wcwidth==0.2.13
+webencodings==0.5.1
 Werkzeug==3.0.3
 wsproto==1.2.0
+yarg==0.1.9
