--- a/requirements.txt
+++ b/requirements.txt
@@ -7,8 +7,9 @@ bidict==0.23.1
 bleach==6.1.0
 blinker==1.8.2
 build==1.2.1
-certifi==2024.2.2
+certifi==2024.6.2
 charset-normalizer==3.3.2
+chromedriver-binary==128.0.6542.0.0
 click==8.1.7
 decorator==5.1.1
 defusedxml==0.7.1
@@ -52,7 +53,6 @@ platformdirs==4.2.2
 prompt_toolkit==3.0.47
 ptyprocess==0.7.0
 pure-eval==0.2.2
-
 PyGetWindow==0.0.9
 Pygments==2.18.0
 PyMsgBox==1.0.9
