--- a/requirements.txt
+++ b/requirements.txt
@@ -20,6 +20,7 @@ fastjsonschema==2.20.0
 Flask==3.0.3
 Flask-Cors==4.0.1
 Flask-SocketIO==5.3.6
+flask-restful==0.3.9
 gunicorn==22.0.0
 h11==0.14.0
 idna==3.6
